--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Version 0.4.15     unreleased
+
+	* Update fastapi and starlette to address CVE-2024-24762 from Dependabot.
+
 Version 0.4.14     17 Jan 2024
 
 	* Require minimum Python version v3.10.
