--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
 Version 0.4.15     unreleased
 
+	* Update cryptography to address CVE-2024-0727 from Dependabot.
 	* Update fastapi and starlette to address CVE-2024-24762 from Dependabot.
 
 Version 0.4.14     17 Jan 2024
